package grpc

import (
	"context"

	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"

	thothnetworkv1 "github.com/ZanzyTHEbar/thothnetwork/pkg/gen/proto/thothnetwork/v1"
)

// TwinService implements the TwinService gRPC service
type TwinService struct {
	thothnetworkv1.UnimplementedTwinServiceServer
	adapter *Adapter
}

// NewTwinService creates a new TwinService instance
func NewTwinService(adapter *Adapter) *TwinService {
	return &TwinService{
		adapter: adapter,
	}
}

// GetTwin retrieves a digital twin by device ID
func (s *TwinService) GetTwin(ctx context.Context, req *thothnetworkv1.GetTwinRequest) (*thothnetworkv1.GetTwinResponse, error) {
	s.adapter.logger.Debug("GetTwin request received", "deviceID", req.DeviceId)

	// TODO: Implement actual twin retrieval logic
	// This would typically involve:
	// 1. Validating the request
	// 2. Calling a domain service to get the twin
	// 3. Converting the result to the response type

	return nil, status.Error(codes.Unimplemented, "method GetTwin not implemented")
}

// UpdateTwinState updates the state of a digital twin
func (s *TwinService) UpdateTwinState(ctx context.Context, req *thothnetworkv1.UpdateTwinStateRequest) (*thothnetworkv1.UpdateTwinStateResponse, error) {
	s.adapter.logger.Debug("UpdateTwinState request received", "deviceID", req.DeviceId)

	// TODO: Implement actual twin state update logic

	return nil, status.Error(codes.Unimplemented, "method UpdateTwinState not implemented")
}

// UpdateTwinDesired updates the desired state of a digital twin
func (s *TwinService) UpdateTwinDesired(ctx context.Context, req *thothnetworkv1.UpdateTwinDesiredRequest) (*thothnetworkv1.UpdateTwinDesiredResponse, error) {
	s.adapter.logger.Debug("UpdateTwinDesired request received", "deviceID", req.DeviceId)

	// TODO: Implement actual twin desired state update logic

	return nil, status.Error(codes.Unimplemented, "method UpdateTwinDesired not implemented")
}

// DeleteTwin deletes a digital twin
func (s *TwinService) DeleteTwin(ctx context.Context, req *thothnetworkv1.DeleteTwinRequest) (*thothnetworkv1.DeleteTwinResponse, error) {
	s.adapter.logger.Debug("DeleteTwin request received", "deviceID", req.DeviceId)

	// TODO: Implement actual twin deletion logic

	return nil, status.Error(codes.Unimplemented, "method DeleteTwin not implemented")
}
